package commands;

public interface Command {
	String execute();
}
