package io;

public interface InputHandler {
	String readInput();

}
