package io;

public interface OutputHandler {
	void printOutput(String output);
}
